# rift

./: README.md  full_install.sh
.github/workflows/: build-engine.yml
editors/rift-vscode/: .eslintrc.json  CONTRIBUTORS.md  README.md  package-lock.json  package.json  reinstall.sh  tsconfig.json
editors/rift-vscode/src/: client.ts  extension.ts  rift.code-workspace  types.ts
editors/rift-vscode/src/activation/: downloadBuild.ts  (+2 more)
rift-engine/: .gitignore  pyproject.toml  rift.spec  scripts.hdnb
rift-engine/rift/: __about__.py  __main__.py
rift-engine/rift/agents/: __init__.py  abstract.py  add_missing_types.py  agenttask.py  aider_agent.py  code_edit.py  curl_agent.py  docstring_agent.py  engineer.py  mentat_agent.py  reverso.py  rift_chat.py  sample_agent.py  smol.py  type_inference_agent.py
rift-engine/rift/agents/cli/: agent.py  gpt_eng.py  smol.py  util.py
rift-engine/rift/agents/client/: agent_client.py  cli_agent.py  gpt_eng.py  smol.py  util.py
rift-engine/rift/ir/: IR.py  completions.py  completions.txt  custom_parsers.py  missing_docstrings.py  missing_types.py  missing_types.txt  parser.py  parser_core.py  python_typing.py  rescript_parser.py  response.py  response_test.txt  symbol_table.txt  test_completions.py  test_missing_types.py  test_parser.py  test_response.py
rift-engine/rift/llm/: abstract.py  create.py  gpt4all_model.py  hf_client.py  openai_client.py  openai_types.py  prompt.py
rift-engine/rift/lsp/: document.py  server.py  types.py
rift-engine/rift/rpc/: extrarpc.py  io_transport.py  jsonrpc.py
rift-engine/rift/server/: core.py  lsp.py  selection.py
rift-engine/rift/util/: TextStream.py  asyncgen.py  context.py  file_diff.py  fs.py  ofdict.py  type_util.py
(+38 files in other folders)
